--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VITE_WEB_APP_URL=https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec
-VITE_API_TOKEN=your_secret_token_here
+VITE_SPIN_API_URL=https://spin-api.example.com
+VITE_SPIN_API_TOKEN=replace_me_with_secret
